[package]
name = "mini_rbmq_server"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

[dependencies]
# rusqlite = "*"
sqlite3 = "*"
rand = "*"
uuid = { version = "0.7", default-features = false, features = ["serde", "v4"] }

serde = "*"
serde_derive = "*"
serde_json = "*"
rustc-serialize = "*"

rust_parse = { git = "https://github.com/MwlLj/rust_parse" }
rust_pool = { git = "https://github.com/MwlLj/rust-pool" }
